// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2;

import "com/daml/ledger/api/v2/offset_checkpoint.proto";
import "com/daml/ledger/api/v2/reassignment.proto";
import "com/daml/ledger/api/v2/topology_transaction.proto";
import "com/daml/ledger/api/v2/transaction.proto";
import "com/daml/ledger/api/v2/transaction_filter.proto";

option csharp_namespace = "Com.Daml.Ledger.Api.V2";
option java_outer_classname = "UpdateServiceOuterClass";
option java_package = "com.daml.ledger.api.v2";

// Allows clients to read updates (transactions, (un)assignments, topology events) from the ledger.
//
// ``GetUpdates`` provides a comprehensive stream of updates/changes
// which happened on the virtual shared ledger. These streams are indexed with ledger
// offsets, which are strictly increasing.
// The virtual shared ledger consist of changes happening on multiple synchronizers which are
// connected to the serving participant. Each update belongs to one synchronizer, this is
// provided in the result (the ``synchronizer_id`` field in ``Transaction``
// for transactions, the ``source`` field in ``UnassignedEvent`` and the ``target`` field in ``AssignedEvent``).
// Consumers can rely on strong causal guarantees on the virtual shared ledger for a single
// synchronizer: updates which have greater offsets are happened after than updates with smaller
// offsets for the same synchronizer. Across different synchronizers this is not guaranteed.
service UpdateService {
  // Read the ledger's filtered update stream for the specified contents and filters.
  // It returns the event types in accordance with the stream contents selected. Also the selection criteria
  // for individual events depends on the transaction shape chosen.
  //
  // - ACS delta: a requesting party must be a stakeholder of an event for it to be included.
  // - ledger effects: a requesting party must be a witness of an event for it to be included.
  rpc GetUpdates(GetUpdatesRequest) returns (stream GetUpdatesResponse);

  // Lookup an update by its offset.
  // If there is no update with this offset, or all the events are filtered, an UPDATE_NOT_FOUND error will be raised.
  rpc GetUpdateByOffset(GetUpdateByOffsetRequest) returns (GetUpdateResponse);

  // Lookup an update by its ID.
  // If there is no update with this ID, or all the events are filtered, an UPDATE_NOT_FOUND error will be raised.
  rpc GetUpdateById(GetUpdateByIdRequest) returns (GetUpdateResponse);
}

message GetUpdatesRequest {
  // Beginning of the requested ledger section (non-negative integer).
  // The response will only contain transactions whose offset is strictly greater than this.
  // If zero, the stream will start from the beginning of the ledger.
  // If positive, the streaming will start after this absolute offset.
  // If the ledger has been pruned, this parameter must be specified and be greater than the pruning offset.
  int64 begin_exclusive = 1;

  // End of the requested ledger section.
  // The response will only contain transactions whose offset is less than or equal to this.
  // Optional, if empty, the stream will not terminate.
  // If specified, the stream will terminate after this absolute offset (positive integer) is reached.
  optional int64 end_inclusive = 2;

  reserved 3;
  reserved "filter";

  reserved 4;
  reserved "verbose";

  // Required
  UpdateFormat update_format = 5;
}

message GetUpdatesResponse {
  // The update that matches the filter in the request.
  oneof update {
    Transaction transaction = 1;
    Reassignment reassignment = 2;
    OffsetCheckpoint offset_checkpoint = 3;
    TopologyTransaction topology_transaction = 4;
  }
}

message GetUpdateByOffsetRequest {
  // The offset of the update being looked up.
  // Must be a valid absolute offset (positive integer).
  // Required
  int64 offset = 1;

  // The format for the update.
  // Required
  UpdateFormat update_format = 2;
}

message GetUpdateByIdRequest {
  // The ID of a particular update.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string update_id = 1;

  // The format for the update.
  // Required
  UpdateFormat update_format = 2;
}

message GetUpdateResponse {
  // The update that matches the filter in the request.
  oneof update {
    Transaction transaction = 1;
    Reassignment reassignment = 2;
    TopologyTransaction topology_transaction = 3;
  }
}
